// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`notice snapshots (light + dark) > Notice / Binary / LargeFileGate / Submodule / Typechange > BinaryNotice (dark) 1`] = `
<div
  class="flex flex-col items-center justify-center gap-2.5 p-7 text-center text-[13px] leading-5 text-muted"
>
  <span
    class="text-muted"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-file"
      fill="none"
      height="22"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="22"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
      />
      <path
        d="M14 2v5a1 1 0 0 0 1 1h5"
      />
    </svg>
  </span>
  <b
    class="font-medium text-ink"
  >
    Binary file not shown
  </b>
  <div>
    2.0 KB → 4.0 KB
  </div>
  <div
    class="flex items-center gap-2"
  >
    <button
      class="btn btn-sm"
      type="button"
    >
      View as text
    </button>
  </div>
</div>
`;

exports[`notice snapshots (light + dark) > Notice / Binary / LargeFileGate / Submodule / Typechange > BinaryNotice (light) 1`] = `
<div
  class="flex flex-col items-center justify-center gap-2.5 p-7 text-center text-[13px] leading-5 text-muted"
>
  <span
    class="text-muted"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-file"
      fill="none"
      height="22"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="22"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
      />
      <path
        d="M14 2v5a1 1 0 0 0 1 1h5"
      />
    </svg>
  </span>
  <b
    class="font-medium text-ink"
  >
    Binary file not shown
  </b>
  <div>
    2.0 KB → 4.0 KB
  </div>
  <div
    class="flex items-center gap-2"
  >
    <button
      class="btn btn-sm"
      type="button"
    >
      View as text
    </button>
  </div>
</div>
`;

exports[`notice snapshots (light + dark) > Notice / Binary / LargeFileGate / Submodule / Typechange > LargeFileGate huge (dark) 1`] = `
<div
  class="flex flex-col items-center justify-center gap-2.5 p-7 text-center text-[13px] leading-5 text-muted"
>
  <span
    class="text-muted"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-scale"
      fill="none"
      height="22"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="22"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 3v18"
      />
      <path
        d="m19 8 3 8a5 5 0 0 1-6 0zV7"
      />
      <path
        d="M3 7h1a17 17 0 0 0 8-2 17 17 0 0 0 8 2h1"
      />
      <path
        d="m5 8 3 8a5 5 0 0 1-6 0zV7"
      />
      <path
        d="M7 21h10"
      />
    </svg>
  </span>
  <b
    class="font-medium text-ink"
  >
    Diff too large to display
  </b>
  <div>
    Old 11.4 MB · new 11.9 MB. Files over 10 MB per side are not compared in the browser.
  </div>
  <div
    class="font-mono text-[11px] break-all text-muted/70"
  >
    TOO_LARGE
  </div>
</div>
`;

exports[`notice snapshots (light + dark) > Notice / Binary / LargeFileGate / Submodule / Typechange > LargeFileGate huge (light) 1`] = `
<div
  class="flex flex-col items-center justify-center gap-2.5 p-7 text-center text-[13px] leading-5 text-muted"
>
  <span
    class="text-muted"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-scale"
      fill="none"
      height="22"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="22"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 3v18"
      />
      <path
        d="m19 8 3 8a5 5 0 0 1-6 0zV7"
      />
      <path
        d="M3 7h1a17 17 0 0 0 8-2 17 17 0 0 0 8 2h1"
      />
      <path
        d="m5 8 3 8a5 5 0 0 1-6 0zV7"
      />
      <path
        d="M7 21h10"
      />
    </svg>
  </span>
  <b
    class="font-medium text-ink"
  >
    Diff too large to display
  </b>
  <div>
    Old 11.4 MB · new 11.9 MB. Files over 10 MB per side are not compared in the browser.
  </div>
  <div
    class="font-mono text-[11px] break-all text-muted/70"
  >
    TOO_LARGE
  </div>
</div>
`;

exports[`notice snapshots (light + dark) > Notice / Binary / LargeFileGate / Submodule / Typechange > LargeFileGate tooLarge (dark) 1`] = `
<div
  class="flex flex-col items-center justify-center gap-2.5 p-7 text-center text-[13px] leading-5 text-muted"
>
  <b
    class="font-medium text-ink"
  >
    Large diff
     (3,412 lines changed)
    .
  </b>
  <div
    class="flex items-center gap-2"
  >
    <button
      class="btn btn-sm"
      type="button"
    >
      Load diff
    </button>
  </div>
</div>
`;

exports[`notice snapshots (light + dark) > Notice / Binary / LargeFileGate / Submodule / Typechange > LargeFileGate tooLarge (light) 1`] = `
<div
  class="flex flex-col items-center justify-center gap-2.5 p-7 text-center text-[13px] leading-5 text-muted"
>
  <b
    class="font-medium text-ink"
  >
    Large diff
     (3,412 lines changed)
    .
  </b>
  <div
    class="flex items-center gap-2"
  >
    <button
      class="btn btn-sm"
      type="button"
    >
      Load diff
    </button>
  </div>
</div>
`;

exports[`notice snapshots (light + dark) > Notice / Binary / LargeFileGate / Submodule / Typechange > Notice (dark) 1`] = `
<div
  class="flex flex-col items-center justify-center gap-2.5 p-7 text-center text-[13px] leading-5 text-muted"
>
  <b
    class="font-medium text-ink"
  >
    Message
  </b>
  <div>
    detail line
  </div>
  <div
    class="flex items-center gap-2"
  >
    <button
      type="button"
    >
      Act
    </button>
  </div>
</div>
`;

exports[`notice snapshots (light + dark) > Notice / Binary / LargeFileGate / Submodule / Typechange > Notice (light) 1`] = `
<div
  class="flex flex-col items-center justify-center gap-2.5 p-7 text-center text-[13px] leading-5 text-muted"
>
  <b
    class="font-medium text-ink"
  >
    Message
  </b>
  <div>
    detail line
  </div>
  <div
    class="flex items-center gap-2"
  >
    <button
      type="button"
    >
      Act
    </button>
  </div>
</div>
`;

exports[`notice snapshots (light + dark) > Notice / Binary / LargeFileGate / Submodule / Typechange > SubmoduleCard (dark) 1`] = `
<dl
  class="grid grid-cols-[max-content_1fr] gap-x-3 gap-y-1.5 p-3 text-[12px] leading-5"
  data-card="submodule"
>
  <dt
    class="text-muted"
  >
    Recorded
  </dt>
  <dd
    class="min-w-0 text-ink"
  >
    <span
      class="font-mono"
    >
      339e41b → a1b2c3d
    </span>
  </dd>
  <dt
    class="text-muted"
  >
    Inside
  </dt>
  <dd
    class="min-w-0 text-ink"
  >
    <span
      class="text-muted"
    >
      …
    </span>
  </dd>
</dl>
`;

exports[`notice snapshots (light + dark) > Notice / Binary / LargeFileGate / Submodule / Typechange > SubmoduleCard (light) 1`] = `
<dl
  class="grid grid-cols-[max-content_1fr] gap-x-3 gap-y-1.5 p-3 text-[12px] leading-5"
  data-card="submodule"
>
  <dt
    class="text-muted"
  >
    Recorded
  </dt>
  <dd
    class="min-w-0 text-ink"
  >
    <span
      class="font-mono"
    >
      339e41b → a1b2c3d
    </span>
  </dd>
  <dt
    class="text-muted"
  >
    Inside
  </dt>
  <dd
    class="min-w-0 text-ink"
  >
    <span
      class="text-muted"
    >
      …
    </span>
  </dd>
</dl>
`;

exports[`notice snapshots (light + dark) > Notice / Binary / LargeFileGate / Submodule / Typechange > TypechangeNotice (dark) 1`] = `
<div
  class="flex items-center gap-1.5 border-b border-line bg-accent-subtle px-3 py-1.5 text-xs text-ink"
  role="note"
>
  Symlink
   
  <svg
    aria-hidden="true"
    class="lucide lucide-arrow-right text-muted"
    fill="none"
    height="12"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 12h14"
    />
    <path
      d="m12 5 7 7-7 7"
    />
  </svg>
  <span
    class="sr-only"
  >
    to
  </span>
   
  regular file
</div>
`;

exports[`notice snapshots (light + dark) > Notice / Binary / LargeFileGate / Submodule / Typechange > TypechangeNotice (light) 1`] = `
<div
  class="flex items-center gap-1.5 border-b border-line bg-accent-subtle px-3 py-1.5 text-xs text-ink"
  role="note"
>
  Symlink
   
  <svg
    aria-hidden="true"
    class="lucide lucide-arrow-right text-muted"
    fill="none"
    height="12"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 12h14"
    />
    <path
      d="m12 5 7 7-7 7"
    />
  </svg>
  <span
    class="sr-only"
  >
    to
  </span>
   
  regular file
</div>
`;
